--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1088,6 +1088,9 @@ p.meetup-content{
     box-shadow: 0px 0px 5px 1px #f7f7f7;
     z-index: 999;
 }
+.specific-meetup-questions i {
+	cursor: pointer;
+}
 #questioner-questions-wrapper .specific-meetup-questions .questioner-username{
 	color: #730099;
 }
