--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1053,7 +1053,15 @@ p.meetup-content{
 .post-question{
 	padding-left: 10%;
 }
-
+#create {
+	margin-top: 2%;
+	background: #9816f4;
+	border: none;
+	padding: 1%;
+	color: #fff;
+	width: 10%;
+	cursor: pointer;
+}
 
 /*#questioner-questions-wrapper section p{
 	display: none;
