--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -686,7 +686,8 @@ p.meetup-content{
 	margin-bottom: 2%;
 }
 .qestions-feed-rows {
-}
+	padding-left: 5%;
+}	
 .feed-created-by {
 	font-weight: bolder !important;
 	color: #9816f4;
@@ -780,6 +781,7 @@ p.meetup-content{
 	width: 100%;
 	height: auto;
 	margin:auto;
+	margin-top: 5%;
 	background-color: #303038;
 	padding: 20px 0px;
 }
